--- a/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5438/08a0-3f64
+    uri: https://app.test.datacite.org/10.5072/x86n-nm18
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 10:20:19 GMT
+      - Sun, 17 Jun 2018 20:17:57 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
@@ -33,31 +33,31 @@ http_interactions:
       Vary:
       - Accept-Encoding, Origin
       X-Request-Id:
-      - 4c0a1b23-c523-4440-abcc-53b3e2b0ef82
+      - 399c8cdb-1e22-4a6f-a3ec-9c8824cc1ffa
       Content-Disposition:
-      - attachment; filename=_10.5438_08a0-3f64.xml
+      - attachment; filename=_10.5072_x86n-nm18.xml
       Content-Transfer-Encoding:
       - binary
       Etag:
-      - W/"6e86b6704bc799a8183dd2b5642e623b"
+      - W/"74b067c6e2fcf3bfe63d40bb77de471d"
       X-Runtime:
-      - '0.007461'
+      - '0.007685'
       X-Powered-By:
       - Phusion Passenger 5.3.2
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.2
     body:
       encoding: ASCII-8BIT
-      string: |-
+      string: |
         <?xml version="1.0" encoding="UTF-8"?>
         <resource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://datacite.org/schema/kernel-4" xsi:schemaLocation="http://datacite.org/schema/kernel-4 http://schema.datacite.org/meta/kernel-4/metadata.xsd">
-          <identifier identifierType="DOI">10.5438/08A0-3F64</identifier>
+          <identifier identifierType="DOI">10.5072/X86N-NM18</identifier>
           <creators>
             <creator>
               <creatorName>Fenner, Martin</creatorName>
               <givenName>Martin</givenName>
               <familyName>Fenner</familyName>
-              <nameIdentifier schemeURI="http://orcid.org/" nameIdentifierScheme="ORCID">0000-0003-1419-2405</nameIdentifier>
+              <nameIdentifier schemeURI="http://orcid.org/" nameIdentifierScheme="ORCID">https://orcid.org/0000-0003-1419-2405</nameIdentifier>
             </creator>
           </creators>
           <titles>
@@ -67,12 +67,13 @@ http_interactions:
           <publicationYear>2016</publicationYear>
           <resourceType resourceTypeGeneral="Text">BlogPosting</resourceType>
           <alternateIdentifiers>
-            <alternateIdentifier alternateIdentifierType="Local accession number">MS-49-3632-5083</alternateIdentifier>
+            <alternateIdentifier alternateIdentifierType=""/>
           </alternateIdentifiers>
           <subjects>
             <subject>datacite</subject>
             <subject>doi</subject>
             <subject>metadata</subject>
+            <subject>featured</subject>
           </subjects>
           <dates>
             <date dateType="Created">2016-12-20</date>
@@ -80,15 +81,18 @@ http_interactions:
             <date dateType="Updated">2016-12-20</date>
           </dates>
           <relatedIdentifiers>
+            <relatedIdentifier relatedIdentifierType="DOI" relationType="IsPartOf">10.5438/0000-00ss</relatedIdentifier>
             <relatedIdentifier relatedIdentifierType="DOI" relationType="References">10.5438/0012</relatedIdentifier>
-            <relatedIdentifier relatedIdentifierType="DOI" relationType="References">10.5438/55E5-T5C0</relatedIdentifier>
-            <relatedIdentifier relatedIdentifierType="DOI" relationType="IsPartOf">10.5438/0000-00SS</relatedIdentifier>
+            <relatedIdentifier relatedIdentifierType="DOI" relationType="References">10.5438/55e5-t5c0</relatedIdentifier>
           </relatedIdentifiers>
           <version>1.0</version>
+          <rightsList>
+            <rights rightsURI="https://creativecommons.org/licenses/by/4.0/">https://creativecommons.org/licenses/by/4.0/</rights>
+          </rightsList>
           <descriptions>
             <description descriptionType="Abstract">Eating your own dog food is a slang term to describe that an organization should itself use the products and services it provides. For DataCite this means that we should use DOIs with appropriate metadata and strategies for long-term preservation for...</description>
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 10:20:23 GMT
+  recorded_at: Sun, 17 Jun 2018 20:17:57 GMT
 recorded_with: VCR 3.0.3
