--- a/.travis.yml
+++ b/.travis.yml
@@ -41,20 +41,20 @@ after_success:
       echo "Pushed to" $REPO:$TRAVIS_BRANCH;
     fi
 
-  - if [ "$AUTO_DEPLOY" == "a" ]; then
+  - if [ "$AUTO_DEPLOY" == "true" ]; then
       wget https://github.com/jwilder/dockerize/releases/download/v0.6.0/dockerize-linux-amd64-v0.6.0.tar.gz;
       tar -xzvf dockerize-linux-amd64-v0.6.0.tar.gz;
       rm dockerize-linux-amd64-v0.6.0.tar.gz;
       export GIT_SHA=$(git rev-parse --short HEAD);
       export GIT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1));
       git clone "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git";
-      ./dockerize -template vendor/docker/_cheetoh.auto.tfvars.tmpl:mastino/stage/services/mds/_mds.auto.tfvars;
+      ./dockerize -template vendor/docker/_poodle.auto.tfvars.tmpl:mastino/stage/services/mds/_poodle.auto.tfvars;
       cd mastino;
       git remote;
       git config user.email ${DOCKER_EMAIL};
       git config user.name ${DOCKER_USERNAME};
-      git add stage/services/cheetoh/_cheetoh.auto.tfvars;
-      git commit -m "Adding mds git variables for latest commit";
+      git add stage/services/mds/_poodle.auto.tfvars;
+      git commit -m "Adding poodle git variables for latest commit";
       git push "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git" master;
     fi
 
