support 403 status datacite/datacite#411

--- a/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
+++ b/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 14 Jul 2018 06:23:50 GMT
+      - Sat, 14 Jul 2018 17:41:09 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -31,17 +31,16 @@ http_interactions:
       Vary:
       - Accept-Encoding, Origin
       X-Runtime:
-      - '0.009749'
+      - '0.008580'
       X-Request-Id:
-      - 79b9ca19-ef87-4873-9697-530602654e8f
+      - 77e2e7e3-6b7f-43b6-b48c-68dcc1f2efdd
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"errors":[{"status":"401","title":"You are not authorized to access
-        this resource."}]}'
+      string: '{"errors":[{"status":"401","title":"Bad credentials."}]}'
     http_version: 
-  recorded_at: Sat, 14 Jul 2018 06:23:54 GMT
+  recorded_at: Sat, 14 Jul 2018 17:41:15 GMT
 recorded_with: VCR 3.0.3
