--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata/should_get.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata/should_get.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,21 +19,21 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 10:20:19 GMT
+      - Thu, 19 Jul 2018 07:33:17 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      X-Anonymous-Consumer:
-      - 'true'
       Cache-Control:
       - private
       Vary:
       - Accept-Encoding, Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 4c0a1b23-c523-4440-abcc-53b3e2b0ef82
+      - 63897223-2e19-4f01-909c-e273cb90bc06
       Content-Disposition:
       - attachment; filename=_10.5438_08a0-3f64.xml
       Content-Transfer-Encoding:
@@ -41,11 +41,11 @@ http_interactions:
       Etag:
       - W/"6e86b6704bc799a8183dd2b5642e623b"
       X-Runtime:
-      - '0.007461'
+      - '0.011711'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: |-
@@ -90,5 +90,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 10:20:23 GMT
+  recorded_at: Thu, 19 Jul 2018 07:33:19 GMT
 recorded_with: VCR 3.0.3
