--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_invalid/should_delete.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_invalid/should_delete.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.5438/08a0-3f64
+    uri: https://app.test.datacite.org/dois/10.5072/tuprints-dev.ulb.tu-darmstadt.de.10007357
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 20:23:32 GMT
+      - Thu, 19 Jul 2018 07:24:34 GMT
       Connection:
       - keep-alive
       Status:
@@ -31,16 +31,16 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 7d124073-5af7-4774-9328-4582aa73041c
+      - 861005c5-136e-41cb-a2b7-88cdaf62eb19
       X-Runtime:
-      - '0.015743'
+      - '0.026089'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 20:23:33 GMT
+  recorded_at: Thu, 19 Jul 2018 07:24:36 GMT
 recorded_with: VCR 3.0.3
